--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ aside:hover{
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.267);
 }
 .footer {
-  background: radial-gradient(circle at top, #000000, #000000);
+  background: radial-gradient(circle at top, #1E3EA1, #1E3EA1);
   color: #ccc;
   padding: 60px 80px 30px;
   font-family: Arial, sans-serif;
