--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ section.fundo-banner{
     padding: 20px;
     height: 62vh;
     margin: auto;
-    width: 70%;
+    width: 80%;
     border-radius: 20px;
     position: relative;
 }
@@ -110,6 +110,8 @@ section.fundo-banner{
 main{
     margin: auto;
     padding: 20px;
+    max-width: 1200px;
+    background-color:white;
 }
 main h2{
     padding-top: 50px;
