--- a/styles/style.css
+++ b/styles/style.css
@@ -136,7 +136,7 @@ main{
     padding: 0px 0px 20px 0px;
 }
 main h2{
-    color: #2d2d2d;
+    color: #000000;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.225);
     padding-top: 50px;
     padding-bottom: 20px;
