--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@
 }
 
 .fundo-banner a.fale-conosco{
-    color: wheat;
+    color: rgb(255, 255, 255);
     background-color: rgba(255, 255, 255, 0);
     border: 1px solid rgb(255, 255, 255);
     box-shadow: 1px 1px 1px rgba(255, 0, 0, 0);
