--- a/styles/catalogo.css
+++ b/styles/catalogo.css
@@ -29,23 +29,42 @@
     padding: 0px;
     box-sizing: border-box;
 }
-.cabecalho{
-    background-color: white;
-    padding: 12px;
+.catalogo{
+    background-image: linear-gradient(to right, #1E3A8B, #1E40AF);
+    color: white;
+    text-align: center;
+    font-family: fonte1;
+    padding: 22px;
 }
+.catalogo h1{
+    font-size: 2em;
+    margin-bottom: 12px;
+}
+.catalogo p{
+    font-size: 1.1em;
+    font-family: fonte1;
+    line-height: 1.4em;
+}
+.cabecalho{
+    background-color: rgb(255, 255, 255);
+    padding: 0px 12px 0px 12px;
+}
+
 .cabecalho-container{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
+
 .cabecalho-container span{
-    color: #383D88;
     font-size: 1.3em;
     display: flex;
     align-items: center;
     gap: 6px;
-    font-family: fonte2;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #383D88;
 }
+
 .cabecalho-col a{
     text-decoration: none;
     padding: 6px;
@@ -53,33 +72,30 @@
     color: #1b2027;
     font-family: fonte2;
 }
+
 .cabecalho-col a:hover{
     color: red;
 }
+
 .cabecalho h3{
     font-family: fonte1;
-    color: red;
+    color: #DF332E;
 }
-.catalogo{
-    background-image: linear-gradient(to right, #1E3A8B, #1E40AF);
-    color: white;
-    text-align: center;
-    font-family: fonte1;
-    padding: 22px;
-    line-height: 2.5em;
-}
+
 main{
     max-width: 1000px;
     margin: auto;
 }
 aside img{
     width: 100px;
+    display: block;
+    margin: auto;
 }
 section.conteudo{
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
-    padding: 62px 0px;
+    padding: 24px 14px;
 }
 aside{
     display: inline-block;
@@ -118,4 +134,53 @@ aside:hover{
     background-color: #8585857c;
     transition: 0.5s;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.267);
+}
+form{
+    margin-top: 30px;
+    padding: 12px;
+}
+input[type="text"]{
+    width: 200px;
+    padding: 8px;
+    font-size: 0.9em;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.767);
+}
+#resultado{
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+
+}
+@media(max-width: 411px){
+    aside img{
+        width: 64px;
+        height: 64px;
+        margin: auto;
+    }
+    aside a{
+        font-size: 12px;
+    }
+    aside h3{
+        font-size: 14px;
+    }
+    aside p{
+        font-size: 12px;
+    }
+}
+@media(max-width: 1260px){
+    .footer-col{
+    flex-direction: column 2;
+    }
+}
+@media(max-width: 571px) {
+    .cabecalho {
+        font-size: 0.6em;
+    }
+    .cabecalho-col img{
+        width: 26px;
+    }
+    .cabecalho-col a{
+        font-size: 1.2em;
+    }
 }
