--- a/styles/catalogo.css
+++ b/styles/catalogo.css
@@ -152,6 +152,54 @@ input[type="text"]{
     margin-top: 10px;
 
 }
+
+.footer {
+    background: radial-gradient(circle at top, #1E3EA1, #1E3EA1);
+    color: #ccc;
+    padding: 48px 22px 30px;
+    font-family: Arial, sans-serif;
+    margin-top: 50px;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-around;
+    gap: 6px;
+}
+
+.footer-col img{
+    padding: 6px;
+    align-items: center;
+    text-align: center;
+    border-radius: 11px;
+}
+.footer-col img:hover{
+    transform: scale(1.1);
+    transition: 0.5s;
+}
+.footer-col h2 {
+    padding-bottom: 18px;  
+    color: #fff;
+    letter-spacing: 2px;
+}
+.footer-col p {
+    font-size: 16px;
+    line-height: 1.6em;
+    max-width: 260px;
+}
+.footer-col a {
+    color: #BFDBEB;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.footer-col a:hover {
+    color: #ffffff;
+}
+
+
+
+
 @media(max-width: 411px){
     aside img{
         width: 64px;
