--- a/styles/style.css
+++ b/styles/style.css
@@ -143,10 +143,11 @@ main h2{
     font-family: fonte2;
     text-align: center;
 }
-aside img{
+aside > a > img{
     width: 80px;
     height: 80px;
     padding: 20px 20px 10px 20px;
+    margin: 0px 6px;
 }
 section.conteudo{
     display: flex;
@@ -157,7 +158,6 @@ section.conteudo{
 }
 aside{
     display: inline-block;
-    flex-wrap: wrap;
     max-width: 200px;
     border: 0px solid rgba(0, 0, 0, 0.123);
     padding: 16px;
